--- a/LR.WebUI/Areas/Admin/Views/Users/_UserReports.cshtml
+++ b/LR.WebUI/Areas/Admin/Views/Users/_UserReports.cshtml
@@ -1,7 +1,7 @@
 ﻿@model int[]
 @{
     Layout = null;
-    var message = TempData["UserInfoMessage"];
+    var message = ViewBag.UserRoleMessage;
 }
 
 @if (message != null)
