--- a/LR.WebUI/Areas/Admin/Views/Users/_UserRoles.cshtml
+++ b/LR.WebUI/Areas/Admin/Views/Users/_UserRoles.cshtml
@@ -2,7 +2,7 @@
 @{
     Layout = null;
     var roles = (SxAppRole[])ViewBag.Roles;
-    var message = TempData["UserRoleMessage"];
+    var message = ViewBag.UserRoleMessage;
 }
 
 @if (message != null)
