--- a/LR.WebUI/Areas/Admin/less/site.less
+++ b/LR.WebUI/Areas/Admin/less/site.less
@@ -22,3 +22,8 @@ a:not(.btn), a:link:not(.btn), a:active:not(.btn), a:visited:not(.btn), a:focus:
     color:@color-danger;
     font-size:11px;
 }
+
+.tab-spinner{
+    font-size:.9em;
+    margin-right: 5px;
+}
