--- a/LR.WebUI/Areas/Admin/Views/Users/_UserInfo.cshtml
+++ b/LR.WebUI/Areas/Admin/Views/Users/_UserInfo.cshtml
@@ -1,7 +1,7 @@
 ﻿@model SxVMEditAppUser
 @{
     Layout = null;
-    var message = TempData["UserInfoMessage"];
+    var message = ViewBag.UserRoleMessage;
 }
 
 @if (message != null)
@@ -12,7 +12,7 @@ else
 {
     <h3 class="text-warning">Общая иформация</h3>
 }
-@using (Ajax.BeginForm("EditUserInfo", new { controller="users" }, new AjaxOptions { HttpMethod = "post", UpdateTargetId = "info", OnBegin = "$(this).closest('section').find('button[type=\"submit\"]').prepend('<i class=\"fa fa-spin fa-spinner\"></i>&nbsp;')", OnComplete = "removeMessage('#mes-user-info')" }, new { @autocomplete="off"}))
+@using (Ajax.BeginForm("EditUserInfo", new { controller="Users" }, new AjaxOptions { HttpMethod = "post", UpdateTargetId = "info", OnBegin = "$(this).closest('section').find('button[type=\"submit\"]').prepend('<i class=\"fa fa-spin fa-spinner\"></i>&nbsp;')", OnComplete = "removeMessage('#mes-user-info')" }, new { @autocomplete="off"}))
 {
     @Html.AntiForgeryToken()
     @Html.HiddenFor(x => x.Id)
