--- a/LR.WebUI/Views/Shared/_Layout.cshtml
+++ b/LR.WebUI/Views/Shared/_Layout.cshtml
@@ -3,6 +3,12 @@
     var withoutBodyControllers = new string[] { "account" };
     var routeDataValues = Request.RequestContext.RouteData.Values;
     var controller = routeDataValues["controller"].ToString().ToLower();
+    var action = routeDataValues["action"].ToString().ToLower();
+    int? mid = null;
+    if (controller == "articles" && action == "details")
+    {
+        mid = ((VMArticle)Model).Id;
+    }
 }
 
 <!DOCTYPE html>
@@ -32,7 +38,7 @@
                     @Html.Partial("_AboutUs")
                     @Html.Partial("_JoinUs")
                     @Html.Action("Last", "Pictures", new { amount = 9 })
-                    @Html.Action("Last", "Articles", new { amount = 5 })
+                    @Html.Action("Last", "Articles", new { amount = 5, mid= mid })
                     @Html.Action("Categories", "Articles")
                 </div>
             </div>
