--- a/LR.WebUI/less/site.less
+++ b/LR.WebUI/less/site.less
@@ -1646,9 +1646,12 @@ footer {
     margin-bottom:10px;
 }
 
-.comment__author-title >a{
-    text-decoration:none;
+.comment__author-title > a, .comment__author-title > span{
     font-weight:700;
+}
+
+.comment__author-title > a{
+    text-decoration:none;
     transition:@transition;
 }
 
