--- a/LR.WebUI/less/site.less
+++ b/LR.WebUI/less/site.less
@@ -193,6 +193,7 @@ textarea.form-control {
 .navbar-nav > li > a {
     padding-top: 20px;
     padding-bottom: 20px;
+    font-weight:700 !important;
 }
 
 .navbar-default .navbar-nav > li > a {
@@ -1008,6 +1009,11 @@ textarea.form-control {
 
 .last-materials__item-title a:hover {
     color: @color-green-muted;
+}
+
+.last-materials__item-date{
+    color:@color-gray;
+    font-family:@PTSansNarrow;
 }
 
 //categories
