--- a/LR.WebUI/Views/Articles/_Popular.cshtml
+++ b/LR.WebUI/Views/Articles/_Popular.cshtml
@@ -11,14 +11,14 @@
             {
                 item = Model[i];
                 <li class="last-materials__item">
-                    <div class="last-materials__item-img" style="background-image:url('@(i%2==0?"/content/static/temp/lakekayak-585x390.jpg":"/content/static/temp/redwoods-585x390.jpg")')">
+                    <div class="last-materials__item-img" style="background-image:url('@Url.Action("Picture", "Pictures", new { id=item.FrontPictureId })')">
                         <a href="@item.GetUrl(Url)"></a>
                     </div>
                     <div class="last-materials__item-content">
                         <h4 class="last-materials__item-title">
                             <a href="@item.GetUrl(Url)">@item.Title</a>
                         </h4>
-                        <div class="last-materials__item-date">September 4, 2015</div>
+                        <div class="last-materials__item-date">@item.DateOfPublication.ToString("MMMM d, yyyy")</div>
                     </div>
                     <hr />
                 </li>
