--- a/LR.WebUI/Views/Shared/_PreFooter.cshtml
+++ b/LR.WebUI/Views/Shared/_PreFooter.cshtml
@@ -7,7 +7,7 @@
                     <span class="header-d-arrow__span">Сейчас читают</span>
                 </h4>
                 <aside>
-                    @Html.Action("ReadingNow", "Articles")
+                    @Html.Action("ReadingMaterial", "Articles")
                 </aside>
             </div>
             <div class="col-md-4">
