--- a/LR.WebUI/Views/Shared/_Layout.cshtml
+++ b/LR.WebUI/Views/Shared/_Layout.cshtml
@@ -39,7 +39,7 @@
                     @Html.Partial("_JoinUs")
                     @Html.Action("Last", "Pictures", new { amount = 9 })
                     @Html.Action("Last", "Articles", new { amount = 5, mid= mid })
-                    @Html.Action("Categories", "Articles")
+                    @Html.Action("TreeViewMenu", "MaterialCategories", new { mct=SX.WebCore.Enums.ModelCoreType.Article})
                 </div>
             </div>
         </div>
