--- a/LR.WebUI/less/site.less
+++ b/LR.WebUI/less/site.less
@@ -581,7 +581,6 @@ textarea.form-control {
 }
 
 .home-material__img {
-    .img-cover;
     position: relative;
     transition: @transition;
 
@@ -622,6 +621,7 @@ textarea.form-control {
     top: 0;
     width: 100%;
     height: 100%;
+    .img-cover;
 }
 
 .home-material__content {
@@ -671,6 +671,7 @@ textarea.form-control {
     display: inline-block;
     position: relative;
     margin-top: 10px;
+    font-family:@PTSansNarrow;
 }
 
 .home-material__author a {
@@ -1025,10 +1026,6 @@ textarea.form-control {
     padding-left: @def-pad;
 }
 
-.categories__list > li:last-child a {
-    border-bottom: none;
-}
-
 .categories__list a::before {
     content: "\f105";
     font-family: FontAwesome;
@@ -1055,6 +1052,7 @@ textarea.form-control {
     .img-cover;
     min-height: 190px;
     margin-bottom: @def-pad;
+    position:relative;
 }
 
 .read-now-article__img > a {
@@ -1565,6 +1563,7 @@ footer {
 
 .like-material__date {
     color: @color-gray;
+    font-family: @PTSansNarrow;
 }
 
 //tags-cloud
