--- a/LR.WebUI/Areas/Admin/Views/SeoTags/_EditForMaterial.cshtml
+++ b/LR.WebUI/Areas/Admin/Views/SeoTags/_EditForMaterial.cshtml
@@ -1,53 +1,33 @@
 ﻿@model SxVMEditSeoTags
 @{
-    Layout = null;
-    var isNew = Model.Id == 0;
+    var isNew = Model.SeoTitle == null;
 }
 
-<h3>Заголовок, описание, ключевые слова материала</h3>
 
-@if (!isNew)
+@if (ViewBag.SeoInfoRedactInfo != null)
 {
-    <div class="text-right">
-        @using (Ajax.BeginForm("DeleteForMaterial", new { controller = "SeoTags" }, new AjaxOptions { HttpMethod = "post", UpdateTargetId = "seo" }, new { @autocomplete = "off" }))
-        {
-            @Html.AntiForgeryToken()
-            <input type="hidden" name="Id" value="@Model.Id" />
-            <input type="hidden" name="MaterialId" value="@Model.MaterialId"/>
-            <input type="hidden" name="ModelCoreType" value="@Model.ModelCoreType" />
-            <button type="submit" class="btn btn-danger" onclick="if (!confirm('Удалить теги?')) { return false;}">Удалить</button>
-        }
-    </div>
+    <div class="alert alert-info">@ViewBag.SeoInfoRedactInfo</div>
 }
 
-@if (TempData["ModelSeoInfoRedactInfo"] != null)
+@using (Ajax.BeginForm("EditForMaterial", new { controller = "SeoTags" }, new AjaxOptions { HttpMethod = "post", UpdateTargetId = "seo", OnBegin = "$('#btn-save-seo-tag').prepend('<i class=\"fa fa-spinner fa-spin\"></i>')", OnSuccess = "$('#seo-kw').sx_gv(); setTimeout(function(){$('.alert-info').fadeOut();}, 1000)" }))
 {
-    <p class="text-success">@TempData["ModelSeoInfoRedactInfo"]</p>
-}
+    @Html.HiddenFor(x => x.Id)
+    @Html.HiddenFor(x => x.MaterialId)
+    @Html.HiddenFor(x => x.ModelCoreType)
 
-@using (Ajax.BeginForm("EditForMaterial", new { controller = "SeoTags" }, new AjaxOptions { HttpMethod = "post", UpdateTargetId = "grid-seo-tags", OnSuccess= "$('#seo-kw').sx_gv()" }, new { @autocomplete="off"}))
-{
     @Html.AntiForgeryToken()
-    <input type="hidden" name="Id" value="@Model.Id" />
-    <input type="hidden" name="MaterialId" value="@Model.MaterialId" />
-    <input type="hidden" name="ModelCoreType" value="@Model.ModelCoreType" />
 
+    @Html.Partial("_GeneralEdit", Model)
 
-    @Html.Partial("_GeneralEdit")
-
-    <br />
-    <div class="row">
-        <div class="col-md-12">
-            <div class="form-group">
-                <button type="submit" class="btn btn-primary">Сохранить</button>
-            </div>
-        </div>
+    <div class="form-group">
+        <button id="btn-save-seo-tag" type="submit" class="btn btn-primary">@(isNew ? "Добавить" : "Сохранить")</button>
+        <a href="#info" aria-controls="info" class="btn btn-default" onclick="$('a[href=&quot;#info&quot;]').tab('show'); return false;"><i class="fa fa-long-arrow-left" aria-hidden="true"></i>&nbsp;Параметры</a>
     </div>
 }
 
 @if (!isNew)
 {
     <div id="seo-kw">
-        @Html.Action("Index", "SeoKeywords", new { stid = Model.Id, page=1 })
+        @Html.Action("Index", "SeoKeywords", new { stid=Model.Id })
     </div>
 }
