--- a/LR.WebUI/Areas/Admin/Views/ShareButtons/Index.cshtml
+++ b/LR.WebUI/Areas/Admin/Views/ShareButtons/Index.cshtml
@@ -3,6 +3,16 @@
     ViewBag.Title = "Кнопки шар";
 }
 
+@section styles{
+    <style>
+        #grid-share-buttons tbody .col-first{
+            width:0;
+            text-align:center;
+            vertical-align:middle;
+        }
+    </style>
+    }
+
 <h2>@ViewBag.Title</h2>
 <br />
 <div id="grid-share-buttons">
