--- a/LR.WebUI/Areas/Admin/less/sx-gv.less
+++ b/LR.WebUI/Areas/Admin/less/sx-gv.less
@@ -2,12 +2,23 @@
 @import (reference) "colors.less";
 @import (reference) "sizes.less";
 
+
+.sx-gv td.col-cm{
+    text-align:center;
+    vertical-align:middle;
+}
+
+.sx-gv td.word-wrap{
+    word-break: break-all;
+}
+
 .sx-gv a {
     color: inherit;
 }
 
 .sx-gv table {
     margin-bottom: 0;
+    background-color:@color-white;
 }
 
 .sx-gv .tooltip {
