--- a/LR.WebUI/Areas/Admin/Views/Articles/Edit.cshtml
+++ b/LR.WebUI/Areas/Admin/Views/Articles/Edit.cshtml
@@ -28,7 +28,10 @@
     <li role="presentation" class="active"><a href="#info" aria-controls="info" role="tab" data-toggle="tab">Основные параметры</a></li>
     @if (!isNew)
     {
-        <li role="presentation"><a href="#seo-cloud" aria-controls="seo-cloud" role="tab" data-toggle="tab">Облако тегов</a></li>
+        <li role="presentation"><a href="#tags-cloud" aria-controls="tags-cloud" role="tab" data-toggle="tab">Облако тегов</a></li>
+        <li role="presentation"><a href="#seo" aria-controls="seo" role="tab" data-toggle="tab">Продвижение</a></li>
+        <li role="presentation"><a href="#mm-videos" aria-controls="mm-videos" role="tab" data-toggle="tab">Видео</a></li>
+        <li role="presentation"><a href="#mm-pictures" aria-controls="mm-pictures" role="tab" data-toggle="tab">Фото</a></li>
     }
 </ul>
 <br />
@@ -38,22 +41,41 @@
     </div>
     @if (!isNew)
     {
-        <div role="tabpanel" class="tab-pane" id="seo-cloud">
+        <div role="tabpanel" class="tab-pane" id="tags-cloud">
             @using (Ajax.BeginForm("Edit", new { controller = "MaterialTags" }, new AjaxOptions { HttpMethod = "post", UpdateTargetId = "grid-material-tags", OnSuccess= "$('#seo-cloud form input[name=\"Id\"]').val(null)" }, new { @autocomplete = "off" }))
             {
-                @Html.AntiForgeryToken()
-                <input type="hidden" id="MaterialId" name="MaterialId" value="@Model.Id" />
-                <input type="hidden" id="ModelCoreType" name="ModelCoreType" value="@Model.ModelCoreType" />
-                <label for="Value">Новый тег облака</label> <span class="text-info">(максимально 4 слова)</span>
-                <div class="input-group">
-                    <input type="text" name="Id" class="form-control" placeholder="Введите значение тега" />
-                    <span class="input-group-btn">
-                        <button class="btn btn-default" type="submit">Добавить</button>
-                    </span>
-                </div>
+            @Html.AntiForgeryToken()
+            <input type="hidden" id="MaterialId" name="MaterialId" value="@Model.Id" />
+            <input type="hidden" id="ModelCoreType" name="ModelCoreType" value="@Model.ModelCoreType" />
+            <label for="Value">Новый тег облака</label> <span class="text-info">(максимально 4 слова)</span>
+            <div class="input-group">
+                <input type="text" name="Id" class="form-control" placeholder="Введите значение тега" />
+                <span class="input-group-btn">
+                    <button class="btn btn-default" type="submit">Добавить</button>
+                </span>
+            </div>
             }
             <br />
             <div id="grid-material-tags"></div>
+            <br />
+            <div class="form-group">
+                <a href="#info" aria-controls="info" class="btn btn-default" onclick="$('a[href=&quot;#info&quot;]').tab('show'); return false;"><i class="fa fa-long-arrow-left" aria-hidden="true"></i>&nbsp;Параметры</a>
+            </div>
+        </div>
+
+        <div role="tabpanel" class="tab-pane" id="seo">
+        </div>
+
+        <div role="tabpanel" class="tab-pane" id="mm-videos">
+            <h4>Видео контент материала</h4>
+            @Html.Partial("_NotMaterialVideos", Model)
+            <div id="videos"></div>
+        </div>
+
+        <div role="tabpanel" class="tab-pane" id="mm-pictures">
+            <h4>Фото контент материала</h4>
+            @Html.Partial("_NotMaterialPictures", Model)
+            <div id="pictures"></div>
         </div>
     }
 </div>
@@ -92,7 +114,10 @@
                 }
             });
 
-            $('a[href="#seo-cloud"]').on('show.bs.tab', function (e) {
+            $('#videos, #pictures, #not-mat-videos, #not-mat-pictures').sx_gv();
+
+            //tags cloud
+            $('a[href="#tags-cloud"]').on('show.bs.tab', function (e) {
                 $a = $(e.target);
 
                 $.ajax({
@@ -100,6 +125,7 @@
                     url: '@Url.Action("Index","MaterialTags")',
                     data: {mid:@Model.Id, mct: '@Model.ModelCoreType'},
                     beforeSend:function(){
+                        $('a[role="tab"]').find('.tab-spinner').remove();
                         $a.prepend('<i class="fa fa-spinner fa-spin tab-spinner"></i>');
                     },
                     success: function (result) {
@@ -111,6 +137,152 @@
                     }
                 });
             })
+
+            //seo
+            $('a[href="#seo"]').on('show.bs.tab', function (e) {
+                $a = $(e.target);
+
+                $.ajax({
+                    method: 'get',
+                    url: '@Url.Action("EditForMaterial", "SeoTags")',
+                    data: {mid:@Model.Id, mct: '@Model.ModelCoreType'},
+                    beforeSend:function(){
+                        $('a[role="tab"]').find('.tab-spinner').remove();
+                        $a.prepend('<i class="fa fa-spinner fa-spin tab-spinner"></i>');
+                    },
+                    success: function (result) {
+                        $('#seo').html(result);
+                        $('#seo-kw').sx_gv();
+                    },
+                    complete:function(){
+                        $a.find('.tab-spinner').remove();
+                    }
+                });
+            })
+
+            //videos
+            $('a[href="#mm-videos"]').on('show.bs.tab', function (e) {
+                $a = $(e.target);
+
+                $.ajax({
+                    method: 'get',
+                    url: '@Url.Action("Index", "VideoLinks")',
+                    data: {mid:@Model.Id, mct: '@Model.ModelCoreType'},
+                    beforeSend:function(){
+                        $('a[role="tab"]').find('.tab-spinner').remove();
+                        $a.prepend('<i class="fa fa-spinner fa-spin tab-spinner"></i>');
+                    },
+                    success: function (result) {
+                        $('#videos').html(result);
+                    },
+                    complete:function(){
+                        $a.find('.tab-spinner').remove();
+                    }
+                });
+            })
+
+            $('#videos').on('click', '.sx-gv__create-btn', function(){
+                $('#not-mat-videos').modal('show');
+                return false;
+            });
+
+            $('#not-mat-videos').on('show.bs.modal', function (event) {
+                $modal = $(this);
+                $.ajax({
+                    method: 'get',
+                    url: '@Url.Action("IndexNotLinked", "VideoLinks")',
+                    data:{mid:@Model.Id, mct:'@Model.ModelCoreType', fm:@bool.FalseString.ToLower() },
+                    success: function (result) {
+                        $modal.find('.modal-body').html(result);
+                    }
+                });
+            })
+
+            $('#not-mat-videos-form').submit(function (e) {
+                $form = $(this);
+                $target = $('#not-mat-videos');
+                $target.find('input[type="checkbox"]:checked').each(function () {
+                    $input = $(this);
+                    var id = $input.closest('.sx-gv__row').attr('data-row-id');
+                    $('<input type="hidden" name="video" value="' + id + '" />').appendTo($form);
+                });
+
+                $.ajax({
+                    url: '@Url.Action("AddMaterialVideo", "VideoLinks")',
+                    data: $form.serialize(),
+                    type: 'post',
+                    success: function (data) {
+                        $('#videos').html(data);
+                        $('#not-mat-videos').modal('hide');
+                    },
+                    complete: function () {
+                        $form.find('input[name="video"]').remove();
+                    }
+                });
+                e.preventDefault();
+            });
+
+            //pictures
+            $('a[href="#mm-pictures"]').on('show.bs.tab', function (e) {
+                $a = $(e.target);
+
+                $.ajax({
+                    method: 'get',
+                    url: '@Url.Action("Index", "PictureLinks")',
+                    data: {mid:@Model.Id, mct: '@Model.ModelCoreType'},
+                    beforeSend:function(){
+                        $('a[role="tab"]').find('.tab-spinner').remove();
+                        $a.prepend('<i class="fa fa-spinner fa-spin tab-spinner"></i>');
+                    },
+                    success: function (result) {
+                        $('#pictures').html(result);
+                    },
+                    complete:function(){
+                        $a.find('.tab-spinner').remove();
+                    }
+                });
+            })
+
+            $('#pictures').on('click', '.sx-gv__create-btn', function(){
+                $('#not-mat-pictures').modal('show');
+                return false;
+            });
+
+            $('#not-mat-pictures').on('show.bs.modal', function (event) {
+                $modal = $(this);
+                $.ajax({
+                    method: 'get',
+                    url: '@Url.Action("IndexNotLinked", "PictureLinks")',
+                    data:{mid:@Model.Id, mct:'@Model.ModelCoreType', fm:@bool.FalseString.ToLower() },
+                    success: function (result) {
+                        $modal.find('.modal-body').html(result);
+                    }
+                });
+            })
+
+            $('#not-mat-pictures-form').submit(function (e) {
+                $form = $(this);
+                $target = $('#not-mat-pictures');
+                $target.find('input[type="checkbox"]:checked').each(function () {
+                    $input = $(this);
+                    var id = $input.closest('.sx-gv__row').attr('data-row-id');
+                    $('<input type="hidden" name="picture" value="' + id + '" />').appendTo($form);
+                });
+
+                $.ajax({
+                    url: '@Url.Action("AddMaterialPicture", "PictureLinks")',
+                    data: $form.serialize(),
+                    type: 'post',
+                    success: function (data) {
+                        $('#pictures').html(data);
+                        $('#not-mat-pictures').modal('hide');
+                    },
+                    complete: function () {
+                        $form.find('input[name="picture"]').remove();
+                    }
+                });
+                e.preventDefault();
+            });
         });
     </script>
 }
