--- a/LR.WebUI/Views/Account/Login.cshtml
+++ b/LR.WebUI/Views/Account/Login.cshtml
@@ -12,6 +12,7 @@
         .login-form__header {
             margin: 30px 0;
             text-transform: uppercase;
+            font-family:'PT Sans Narrow', sans-serif;
         }
 
         .login-form__form {
