--- a/LR.WebUI/Views/Shared/_Header.cshtml
+++ b/LR.WebUI/Views/Shared/_Header.cshtml
@@ -18,7 +18,7 @@
                             }
                         </li>
                         <li>
-                            <a href="#">Регистрация</a>
+                            <a href="@Url.Action("Register", "Account")">Регистрация</a>
                         </li>
                         @if (User.Identity.IsAuthenticated)
                         {
