--- a/LR.WebUI/Areas/Admin/Views/PictureLinks/_GridView.cshtml
+++ b/LR.WebUI/Areas/Admin/Views/PictureLinks/_GridView.cshtml
@@ -15,7 +15,7 @@
                 },
                 DataAjaxUrl = Url.Action("Index", "PictureLinks", new { mid = mid, mct = mct }),
                 EnableDeleting = true,
-                DeleteRowUrl = x => { return Url.Action("DeleteMaterialPicture", "PictureLinks", new { mid = mid, mct = mct, vid = x.Id }); },
+                DeleteRowUrl = x => { return Url.Action("DeleteMaterialPicture", "PictureLinks", new { mid = mid, mct = mct, pid = x.Id }); },
                 EnableCreating = true,
                 CreateRowUrl = "javascript:void(0)",
                 ShowPagerInfo=true
