--- a/LR.WebUI/Views/Pictures/_Best.cshtml
+++ b/LR.WebUI/Views/Pictures/_Best.cshtml
@@ -1,25 +1,20 @@
 ﻿@model SxVMPicture[]
+@{
+    SxVMPicture item = null;
+}
 
-<div class="best-pictures">
-    <h4 class="best-pictures-instagram"><span><span class="title">follow me on instagram</span></span></h4>
-    <ul>
-        <li>
-            <a href="#" style="background-image:url('/content/static/temp/13741072_1134383363267451_809617021_n.jpg')"></a>
-        </li>
-        <li>
-            <a href="#" style="background-image:url('/content/static/temp/13731188_1412849788741985_989071069_n.jpg')"></a>
-        </li>
-        <li>
-            <a href="#" style="background-image:url('/content/static/temp/13741072_1134383363267451_809617021_n.jpg')"></a>
-        </li>
-        <li>
-            <a href="#" style="background-image:url('/content/static/temp/13731188_1412849788741985_989071069_n.jpg')"></a>
-        </li>
-        <li>
-            <a href="#" style="background-image:url('/content/static/temp/13741072_1134383363267451_809617021_n.jpg')"></a>
-        </li>
-        <li>
-            <a href="#" style="background-image:url('/content/static/temp/13731188_1412849788741985_989071069_n.jpg')"></a>
-        </li>
-    </ul>
-</div>
+@if (Model.Any())
+{
+    <div class="best-pictures">
+        <h4 class="best-pictures-instagram"><span><span class="title">follow me on instagram</span></span></h4>
+        <ul>
+            @for (int i = 0; i < Model.Length; i++)
+            {
+                item = Model[i];
+                <li>
+                    <a href="#" style="background-image:url('@Url.Action("Picture", "Pictures", new { id = item.Id })')"></a>
+                </li>
+            }
+        </ul>
+    </div>
+}
