--- a/LR.WebUI/Views/Shared/_Navbar.cshtml
+++ b/LR.WebUI/Views/Shared/_Navbar.cshtml
@@ -7,14 +7,12 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a href="#" class="navbar-brand">LR</a>
+            <a href="@Url.Action("Index", "Home")" class="navbar-brand">Главная</a>
         </div>
 
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Главная <span class="sr-only">(current)</span></a></li>
-                <li><a href="#">Новости</a></li>
-                <li><a href="#">Статьи</a></li>
+                <li class="active"><a href="#">Статьи <span class="sr-only">(current)</span></a></li>
                 <li><a href="#">Фото</a></li>
                 <li><a href="#">Видео</a></li>
             </ul>
