--- a/LR.WebUI/less/site.less
+++ b/LR.WebUI/less/site.less
@@ -188,6 +188,10 @@ textarea.form-control {
 .navbar-brand {
     height: 60px;
     padding-top: 20px;
+    text-transform:uppercase;
+    font-size:14px;
+    font-weight:700;
+    font-family:@PTSansNarrow;
 }
 
 .navbar-nav > li > a {
@@ -1050,9 +1054,23 @@ textarea.form-control {
 //read-now-article
 .read-now-article__img {
     .img-cover;
-    min-height: 190px;
+    height: 201px;
     margin-bottom: @def-pad;
     position:relative;
+
+    @media (max-width: @screen-xs-max) {
+        height:300px;
+    }
+
+    @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
+        height:300px;
+    }
+
+    @media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
+    }
+
+    @media (min-width: @screen-lg-min) {
+    }
 }
 
 .read-now-article__img > a {
