--- a/LR.WebUI/less/site.less
+++ b/LR.WebUI/less/site.less
@@ -561,10 +561,12 @@ textarea.form-control {
     height: auto;
     width: auto;
     float: none;
+    text-align:center;
 }
 
 .home-material.first .home-material__img > img {
     max-width: 100%;
+    width:100%;
 }
 
 .home-material.first .home-material__content {
